--- a/public/style/style.css
+++ b/public/style/style.css
@@ -142,7 +142,7 @@ main {
     color: #000;
 }
 .problem-attempt-btn.failure {
-    background-color: #cc0000;
+    background-color: #990000;
     color: #000;
 }
 
