--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,7 +9,7 @@
 /* CSS Custom Properties for Dark Theme */
 :root {
     --color-bg-primary: #222;
-    --color-bg-elevation: #ddd;
+    --color-bg-elevation: #ccc;
     --color-text-primary: #ddd;
     --color-text-secondary: #000;
     --color-accent: #ccff00;
@@ -170,6 +170,7 @@ main {
 
 .problem-attempt-btn {
     width: 32px;
+    border-color: var(--color-bg-primary);
     border-radius: 2px;
     background-color: var(--color-bg-primary);
     color: #fff;
