--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,8 +163,8 @@ main {
 .problem-number {
     display: grid;
     place-content: center;
-    width: 28px;
-    height: 28px;
+    width: 32px;
+    height: 32px;
     border-radius: 2px;
     background-color: #eee;
     color: #222;
@@ -175,35 +175,33 @@ main {
     display: grid;
     place-content: center;
     width: 32px;
-    height: 28px;
-    border: 1px solid transparent;
-    border-radius: 2px;
+    height: 32px;
     color: #444;
     font-family: var(--font-mono), monospace;
     outline: none !important;
     user-select: none;
     cursor: pointer;
     background-color: transparent;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 400;
-    transition: all ease 200ms;
 }
 .problem-attempt.success {
-    border-color: #222;
-    background-color: var(--color-accent);
     color: #000;
-    font-weight: 500;
+    font-weight: 700;
+    background: url("../img/hold1.svg") no-repeat center;
+    background-size: 32px 32px;
 }
 
 .problem-level {
     justify-self: end;
-    width: 28px;
-    height: 28px;
+    display: grid;
+    place-content: center;
+    width: 32px;
+    height: 32px;
     border: 1px solid #000;
     border-radius: 50%;
     background-color: var(--level-bg-color);
     color: var(--level-color);
-    padding: 2px 4px;
     font-size: 14px;
     font-weight: 500;
 }
