--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,6 +185,7 @@ main {
     background-color: transparent;
     font-size: 11px;
     font-weight: 400;
+    -webkit-tap-highlight-color: transparent;
 }
 .problem-attempt-success {
     display: none;
