--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,7 @@ main {
 .top-section {
     position: sticky;
     top: 0;
+    z-index: 1;
     background-color: var(--color-bg-primary);
     padding: 8px;
 }
