--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,22 +151,36 @@ main {
     --level-color: #fff;
 }
 
+.problem-identifier {
+    display: flex;
+    align-items: center;
+}
+
 .problem-line {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto 1fr;
+    grid-template-columns: auto auto auto auto auto auto;
     gap: 16px;
     border-top: 1px solid #bbb;
     padding: 6px;
     background-color: var(--color-bg-elevation);
 }
 
+.problem-level {
+    display: grid;
+    place-content: center;
+    width: 32px;
+    height: 16px;
+    background-color: var(--level-bg-color);
+    color: var(--level-color);
+    font-size: 11px;
+    font-weight: 500;
+}
+
 .problem-number {
     display: grid;
     place-content: center;
-    width: 40px;
+    width: 32px;
     height: 32px;
-    border-left: 8px solid var(--level-bg-color);
-    border-radius: 2px;
     background-color: #eee;
     color: #222;
     font-weight: 500;
@@ -210,19 +224,3 @@ main {
     font-size: 13px;
     font-weight: 700;
 }
-
-.problem-level {
-    justify-self: end;
-    display: grid;
-    place-content: center;
-    width: 32px;
-    height: 32px;
-    border: 1px solid #000;
-    border-radius: 50%;
-    background-color: var(--level-bg-color);
-    color: var(--level-color);
-    font-size: 14px;
-    font-weight: 500;
-}
-
-
