--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,14 +167,15 @@ main {
 
 .problem-level {
     display: grid;
-    place-content: center;
+    place-content: center right;
     width: 32px;
     height: 16px;
-    border-radius: 2px;
     background-color: var(--level-bg-color);
     color: var(--level-color);
+    padding-right: 3px;
     font-size: 11px;
     font-weight: 500;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 16px 100%, 0 calc(100% - 16px));
 }
 
 .problem-number {
