--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,7 @@ main {
     position: sticky;
     top: 0;
     z-index: 1;
+    border-top: 2px solid var(--color-accent);
     background-color: var(--color-bg-primary);
     padding: 8px;
 }
